<!--
  ~ Creator: Kamran Noorinejad on 5/6/20 3:20 PM
  ~ Last modified: 5/6/20 3:20 PM
  ~ Copyright: All rights reserved Ⓒ 2020
  ~ http://www.itskamran.ir/
  -->

<resources>
    <string name="app_name">LeftoRite</string>
    <string name="logo_slogan">Choose Your Taste!</string>
    <string name="no_network">No Network !</string>
    <string name="no_network_desc">Check Your Internet Connection…</string>
    <string name="network_connected">Connected !</string>
    <string name="network_connected_desc">Your Internet Connected</string>
    <string name="email_edit_text">Email</string>
    <string name="sigin_text">Sign In</string>
    <string name="signup_text">Sign up</string>
    <string name="dont_have_account_sign_up_text">Don\'t Have Account?\t</string>
    <string name="have_account_sign_in_text">Already Have Account?\t</string>
    <string name="password_edit_text">Password</string>
    <string name="password_confirm_edit_text">Repeat Password</string>
    <string name="empty_fields">Empty fields Error!</string>
    <string name="empty_fields_desc">please fill out empty fields</string>
    <string name="invalid_email">Invalid Email Address</string>
    <string name="invalid_email_desc">please Write Correct email</string>
    <string name="diff_passwords">Differnet Passwords!</string>
    <string name="diff_passwords_desc">Your passwords are not same</string>
    <string name="invalid_pass">Invalid password!</string>
    <string name="invalid_pass_desc">please correct typed password</string>
    <string name="loading_title">Please wait....</string>
    <string name="loading_desc">fetching data from network</string>
    <string name="network_error_text">error loading data from network</string>
    <string name="which_one">Left or Right?</string>
    <string name="select_category_title">Select Category :</string>
    <string name="current_category">Current Category :\t</string>
    <string name="no_more_items">No More Items…</string>
    <string name="select_all_categories">Select All</string>
    <string name="no_more_items_description">Congratulation!\nChange the category below</string>

    <!-- Preference Titles -->
    <string name="profile_header">Profile</string>
    <string name="network_header">Network</string>

    <!-- Network Preferences -->
    <string name="data_saver_title">Use Less Data</string>

    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="title_version">Version</string>
    <string name="logout_title">Sign Out</string>
    <string name="signout_summary">Click to sign out of your account</string>

    <!-- showcase -->
    <string name="welcome">Welcome!</string>
    <string name="welcome_description">We will show you some items on left &amp; right side, Just like your preferred items, to earn points!</string>
    <string name="like_sides_title">Like %1$s item…</string>
    <string name="like_sides_description">Click here if you like the %1$s side…</string>
    <string name="letsgo">Let\'s Go</string>
    <string name="show_me_how">Show me how…</string>
    <string name="your_points">Your Points</string>
    <string name="points_description">You can earn more points by like more items!</string>
    <string name="categories_list">Categories List</string>
    <string name="categories_list_description">Swipe up to see the list of exciting categories.</string>
    <string name="how_like">How can i \'Like\' my favorite side?</string>
    <string name="how_like_description">\'Double Tap\' on side to Like!\nYou can also \'Drag\' the sides to like them.\nHold your finger on side to see item details</string>

    <string name="network_request_error_title">Oops!</string>
    <string name="network_request_error_msg">Something Went Wrong…\nTry Again Later</string>
    <string name="error_dialog_try_again_button_text">Try Again</string>
    <string name="new_version_dialog_title">Version \'%1$s\' is on board!</string>
    <string name="responded_items_count">You Responded to \'%1$d\' item(s) so far…</string>
    <string name="update_now">Update Now</string>
    <string name="update_later">Maybe Later</string>
    <string name="new_message_button_text">Okay!</string>
    <string name="new_label">NEW</string>
    <string name="separator_split_drag">Drag to Enlarge!</string>
    <string name="separator_split_drag_description">Drag this separator to enlarge items.</string>
    <string name="title_activity_profile">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="history">History</string>
    <string name="history_description">Explore what you\'ve chosen here.</string>
    <string name="no_history_found">No History Found!</string>

</resources>
