<?xml version="1.0" encoding="utf-8"?><!--
  ~ Creator: Kamran Noorinejad on 9/22/20 4:16 PM
  ~ Last modified: 9/22/20 4:16 PM
  ~ Copyright: All rights reserved Ⓒ 2020
  ~ http://www.itskamran.ir/
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activities.ProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:liftOnScroll="true"
        app:statusBarForeground="@android:color/transparent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@android:color/transparent"
            app:contentScrim="@color/white"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:scrimAnimationDuration="200"
            app:scrimVisibleHeightTrigger="400dp"
            app:statusBarScrim="@android:color/transparent"
            app:titleEnabled="false"
            app:toolbarId="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:orientation="vertical"
                app:layout_collapseMode="parallax"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/profile_user_avatar"
                    android:layout_width="@dimen/profile_avatar_dim"
                    android:layout_height="@dimen/profile_avatar_dim"
                    android:layout_gravity="center"
                    android:layout_marginTop="70dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_people"
                    tools:src="@tools:sample/avatars" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/profile_user_points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/point_badge_bg"
                    android:ellipsize="none"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/profile_user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/primaryLightColor"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/profile_user_last_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/secondaryLightDarkTextColor"
                    android:textSize="12sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/lightGray" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/ic_history"
                    app:tint="@color/primaryLightColor" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/history"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/history_description"
                    android:textColor="@color/secondaryLightDarkTextColor"
                    android:textSize="12sp" />

            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginBottom="75dp"
                app:layout_collapseMode="pin"
                app:menu="@menu/menu_profile"
                app:navigationIcon="@drawable/ic_arrow_left"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/toolbar_profile_user_avatar"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_people"
                        tools:src="@tools:sample/avatars" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/toolbar_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_toEndOf="@id/toolbar_profile_user_avatar"
                        android:text="@string/history"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/toolbar_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/toolbar_title"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/toolbar_profile_user_avatar"
                        android:text="@string/history_description"
                        android:textColor="@color/secondaryLightDarkTextColor"
                        android:textSize="12sp" />

                </RelativeLayout>

            </androidx.appcompat.widget.Toolbar>

            <com.agrawalsuneet.dotsloader.loaders.TashieLoader
                android:id="@+id/categories_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_margin="15dp"
                android:layout_marginTop="30dp"
                app:tashieloader_animDelay="100"
                app:tashieloader_animDur="200"
                app:tashieloader_dotsColor="@color/primaryLightColor"
                app:tashieloader_dotsDist="5dp"
                app:tashieloader_dotsRadius="5dp"
                app:tashieloader_interpolator="@android:anim/accelerate_interpolator"
                app:tashieloader_noOfDots="3" />

            <ImageButton
                android:id="@+id/categories_retry_button"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="30dp"
                android:tint="@color/primaryLightColor"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_retry"
                tools:ignore="ContentDescription" />

            <RelativeLayout
                android:id="@+id/tabs_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="30dp"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/select_category_fixed_tab"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/select_category_title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabs_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/select_category_fixed_tab"
                    android:background="@color/lightGray"
                    app:layout_anchorGravity="bottom"
                    app:tabIconTint="@color/colorPrimaryDark"
                    app:tabIndicatorColor="@color/primaryLightColor"
                    app:tabMinWidth="80dp"
                    app:tabMode="scrollable"
                    app:tabTextColor="@color/colorPrimary" />

            </RelativeLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_scrolling" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/history_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.agrawalsuneet.dotsloader.loaders.TashieLoader
            android:id="@+id/histories_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:tashieloader_animDelay="100"
            app:tashieloader_animDur="200"
            app:tashieloader_dotsColor="@color/primaryLightColor"
            app:tashieloader_dotsDist="5dp"
            app:tashieloader_dotsRadius="5dp"
            app:tashieloader_interpolator="@android:anim/accelerate_interpolator"
            app:tashieloader_noOfDots="3" />

    </androidx.viewpager.widget.ViewPager>

</androidx.coordinatorlayout.widget.CoordinatorLayout>